--- a/action.yml
+++ b/action.yml
@@ -12,18 +12,39 @@ outputs:
 runs:
   using: composite
   steps:
-    - name: Set Greeting
+    - if: ${{ runner.os }} == 'Linux' || ${{ runner.os }} == 'macOS' 
+      name: Set Greeting
       run: echo "Hello $INPUT_WHO_TO_GREET."
       shell: bash
       env:
         INPUT_WHO_TO_GREET: ${{ inputs.who-to-greet }}
 
-    - name: Random Number Generator
+    - if: ${{ runner.os }} == 'Windows'
+      name: Set Greeting
+      run: echo "Hello $env:INPUT_WHO_TO_GREET."
+      shell: pwsh
+      env:
+        INPUT_WHO_TO_GREET: ${{ inputs.who-to-greet }}
+    
+    - if: ${{ runner.os }} == 'Linux' || ${{ runner.os }} == 'macOS'
+      name: Random Number Generator
       id: random-number-generator
       run: echo "random-number=$(echo $RANDOM)" >> $GITHUB_OUTPUT
       shell: bash
 
-    - name: Run goodbye.sh
+    - if: ${{ runner.os }} == 'Windows'
+      name: Random Number Generator
+      id: random-number-generator
+      run: echo "random-number=$(Get-Random)" >> $env:GITHUB_OUTPUT
+      shell: pwsh
+
+    - if: ${{ runner.os }} == 'Linux' || ${{ runner.os }} == 'macOS'
+      name: Run goodbye.sh
       run: ${{ github.action_path }}/scripts/goodbye.sh
       shell: bash
+    
+    - if: ${{ runner.os }} == 'Windows'
+      name: Run goodbye.ps1
+      run: ${{ github.action_path }}/scripts/goodbye.bat
+      shell: pwsh
 
