--- a/action.yml
+++ b/action.yml
@@ -10,41 +10,41 @@ outputs:
     description: Random number
     value: ${{ steps.random-number-generator.outputs.random-number }}
 runs:
-  using: composite
-  steps:
-    - if: ${{ runner.os }} == 'Linux' || ${{ runner.os }} == 'macOS' 
-      name: Set Greeting
-      run: echo "Hello $INPUT_WHO_TO_GREET."
-      shell: bash
-      env:
-        INPUT_WHO_TO_GREET: ${{ inputs.who-to-greet }}
-
-    - if: ${{ runner.os }} == 'Windows'
-      name: Set Greeting
+  windows:
+    using: composite
+    if: startsWith(runner.os, 'Windows')
+    steps:
+    - name: Set Greeting
       run: echo "Hello $env:INPUT_WHO_TO_GREET."
       shell: pwsh
       env:
         INPUT_WHO_TO_GREET: ${{ inputs.who-to-greet }}
     
-    - if: ${{ runner.os }} == 'Linux' || ${{ runner.os }} == 'macOS'
-      name: Random Number Generator
-      id: random-number-generator
-      run: echo "random-number=$(echo $RANDOM)" >> $GITHUB_OUTPUT
-      shell: bash
-
-    - if: ${{ runner.os }} == 'Windows'
-      name: Random Number Generator
+    - name: Random Number Generator
       id: random-number-generator
       run: echo "random-number=$(Get-Random)" >> $env:GITHUB_OUTPUT
       shell: pwsh
 
-    - if: ${{ runner.os }} == 'Linux' || ${{ runner.os }} == 'macOS'
-      name: Run goodbye.sh
-      run: ${{ github.action_path }}/scripts/goodbye.sh
-      shell: bash
-    
-    - if: ${{ runner.os }} == 'Windows'
-      name: Run goodbye.ps1
+    - name: Run goodbye.ps1
       run: ${{ github.action_path }}/scripts/goodbye.bat
       shell: pwsh
+  
+  unix:
+    using: composite
+    if: startsWith(runner.os, 'Linux') || startsWith(runner.os, 'macOS')
+    steps:
+    - name: Set Greeting
+      run: echo "Hello $INPUT_WHO_TO_GREET."
+      shell: bash
+      env:
+        INPUT_WHO_TO_GREET: ${{ inputs.who-to-greet }}
+    
+    - name: Random Number Generator
+      id: random-number-generator
+      run: echo "random-number=$(echo $RANDOM)" >> $GITHUB_OUTPUT
+      shell: bash
+
+    - name: Run goodbye.sh
+      run: ${{ github.action_path }}/scripts/goodbye.sh
+      shell: bash
 
