--- a/action.yml
+++ b/action.yml
@@ -12,7 +12,7 @@ outputs:
 runs:
   using: composite
   steps:
-  - if ${{ startsWith(runner.os, 'Windows') }}:
+  - if: runner.os == 'windows'
     run: ./.github/actions/windows.yml
-  - if ${{ startsWith(runner.os, 'Linux') || startsWith(runner.os, 'macOS') }}:
+  - if: runner.os == 'linux' || runner.os == 'macOS'
     run: ./.github/actions/unix.yml
