--- a/action.yml
+++ b/action.yml
@@ -14,5 +14,7 @@ runs:
   steps:
   - if: runner.os == 'windows'
     run: ./.github/actions/windows.yml
+    shell: cmd
   - if: runner.os == 'linux' || runner.os == 'macOS'
     run: ./.github/actions/unix.yml
+    shell: bash
