--- a/action.yml
+++ b/action.yml
@@ -12,9 +12,9 @@ outputs:
 runs:
   using: composite
   steps:
-  - if: runner.os == 'windows'
-    run: ${{ github.action_path }}/.github/actions/windows.yml
+  - if: runner.os == 'Windows'
+    uses: ${{ github.action_path }}/.github/actions/windows.yml
     shell: cmd
-  - if: runner.os == 'linux' || runner.os == 'macOS'
-    run: ${{ github.action_path }}/.github/actions/unix.yml
+  - if: runner.os == 'Linux' || runner.os == 'macOS'
+    uses: ${{ github.action_path }}/.github/actions/unix.yml
     shell: bash
