Not that smart after all then are we..

--- a/action.yml
+++ b/action.yml
@@ -12,6 +12,8 @@ outputs:
 runs:
   using: composite
   steps:
+  - uses: actions/checkout@v4
+
   - if: runner.os == 'Windows'
     uses: ./.github/actions/windows.yml
     
