--- a/action.yml
+++ b/action.yml
@@ -15,7 +15,7 @@ runs:
   - uses: actions/checkout@v4
 
   - if: runner.os == 'Windows'
-    uses: ./.github/actions/windows
+    uses: ${{ github.action_path }}/.github/actions/windows
     
   - if: runner.os == 'Linux' || runner.os == 'macOS'
-    uses: ./.github/actions/unix
+    uses: ${{ github.action_path }}/.github/actions/unix
